--- a/public/templates/cart/index.html
+++ b/public/templates/cart/index.html
@@ -67,64 +67,19 @@
 				</div>
 				<div class="clearfix"></div>
 				<div class="border-detail">
-					<div class="product-detail">
-						<div class="left img w10"><img src="/assets/upload/p-cat-food-1.jpg" /></div>
-						<div class="left name w60"><div class="pl10">Áo kiểu Mango tay dài màu xanh dương in họa tiết</div></div>
-						<div class="left price w10"><span>599.000</span></div>
+					<div class="product-detail" ng-repeat="cartDetail in ctrl.cart" ng-if="cartDetail.quantity > 0">
+						<div class="left img w10"><img ng-src="{{cartDetail.image}}"></div>
+						<div class="left name w60"><div class="pl10"> {{cartDetail.name}}</div></div>
+						<div class="left price w10" ng-if="cartDetail.product_quantity > 0"><span>{{cartDetail.price | currency: "": 0 }}</span><span>đ</span></div>
 						<div class="left quantity w10 text-center">
 							<div class="form">
-								<span class="subtraction">-</span>
-								<span class="text">1</span>
-								<span class="addition">+</span>
+								<span class="subtraction" ng-click="ctrl.removeCart(cartDetail.id)">-</span>
+								<span class="text">{{cartDetail.quantity}}</span>
+								<span class="addition" ng-click="ctrl.addCart(cartDetail.id)">+</span>
 							</div>
-							<div class="remove-cart text-center">Xóa sản phẩm</div>
+							<div class="remove-cart text-center" ng-click="ctrl.removeItemCart(cartDetail.id);" data-toggle="modal" data-target="#confirm-delete">Xóa sản phẩm</div>
 						</div>
-						<div class="left total w10 text-right">1.200.000</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="product-detail">
-						<div class="left img w10"><img src="/assets/upload/p-cat-food-2.jpg" /></div>
-						<div class="left name w60"><div class="pl10">Áo kiểu Mango tay dài màu xanh dương in họa tiết</div></div>
-						<div class="left price w10"><span>599.000</span></div>
-						<div class="left quantity w10 text-center">
-							<div class="form">
-								<span class="subtraction">-</span>
-								<span class="text">1</span>
-								<span class="addition">+</span>
-							</div>
-							<div class="remove-cart text-center">Xóa sản phẩm</div>
-						</div>
-						<div class="left total w10 text-right">1.200.000</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="product-detail">
-						<div class="left img w10"><img src="/assets/upload/p-cat-food-3.jpg" /></div>
-						<div class="left name w60"><div class="pl10">Áo kiểu Mango tay dài màu xanh dương in họa tiết</div></div>
-						<div class="left price w10"><span>599.000</span></div>
-						<div class="left quantity w10 text-center">
-							<div class="form">
-								<span class="subtraction">-</span>
-								<span class="text">1</span>
-								<span class="addition">+</span>
-							</div>
-							<div class="remove-cart text-center">Xóa sản phẩm</div>
-						</div>
-						<div class="left total w10 text-right">1.200.000</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="product-detail">
-						<div class="left img w10"><img src="/assets/upload/p-cat-food-4.jpg" /></div>
-						<div class="left name w60"><div class="pl10">Áo kiểu Mango tay dài màu xanh dương in họa tiết</div></div>
-						<div class="left price w10"><span>599.000</span></div>
-						<div class="left quantity w10 text-center">
-							<div class="form">
-								<span class="subtraction">-</span>
-								<span class="text">1</span>
-								<span class="addition">+</span>
-							</div>
-							<div class="remove-cart text-center">Xóa sản phẩm</div>
-						</div>
-						<div class="left total w10 text-right">1.200.000</div>
+						<div class="left total w10 text-right">{{cartDetail.price*cartDetail.quantity | currency: "": 0 }}</div>
 						<div class="clearfix"></div>
 					</div>
 				</div>
@@ -133,10 +88,20 @@
 					<div class="left w50"><span>Xóa giỏ hàng</span></div>
 					<div class="left w50">
 						<form class="from-coupons right">
-							<input type="text" />
+							<input ng-disabled="ctrl.voucherAmount > 0 || ctrl.isEditMode" type="text"
+                                       placeholder="Nhập mã giảm giá"
+                                       ng-model="ctrl.voucherCode" ng-focus="ctrl.inputVoucher()"
+                                       ng-blur="ctrl.updateVoucher()" enter-click="ctrl.updateVoucher()"
+                                       aria-describedby="basic-addon1"/>
+                                <span class="coupon-status-ok" ng-if="ctrl.voucherAmount > 0" >
+                                    <a ng-click="ctrl.removeVoucher()"><img src="assets/images/coupon_status_wrong.png"></a>
+                                </span>
 							<button>Nhập</button>
 						</form>
 						<div class="pr10 pt5 right">MÃ GIẢM GIÁ TỪ VNSHOP</div>
+						<div class="coupon-status-wrong" ng-if="ctrl.voucherMessage">
+                        {{ctrl.voucherMessage}}
+                    </div>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -153,7 +118,7 @@
 							</div>
 							<div class="pt5">
 								<span>Được giảm: </span>
-								<span><b>4.000.000 VND</b></span>
+								<span><b>-{{ctrl.voucherAmount| currency: "": 0: "." }}</b></span>
 							</div>
 							<div class="pt5">
 								<span>Phí ship: </span>
@@ -161,10 +126,10 @@
 							</div>
 							<div class="pt5">
 								<span>Giá tổng: </span>
-								<span class="total"><b>4.000.000 VND</b></span>
+								<span class="total"><b>{{ctrl.total| currency: "": 0: "." }}</b></span>
 							</div>
 							<div class="btn-confirm-pay">
-								<span>Xác nhận thanh toán</span>
+								<span ng-click="ctrl.goToConfirm(1)">Xác nhận thanh toán</span>
 							</div>
 						</div>
 					</div>
@@ -174,4 +139,36 @@
 			<div class="clearfix"></div>
 		</div>
 	</div>
-</section>
+</section>	
+<div id="confirm-delete" class="modal fade" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content" style="margin-top:180px;">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Thông báo</h4>
+            </div>
+            <div class="contmid">Quý khách có chắc chắn xóa sản phẩm này không?</div>
+
+            <div class="modal-footer">
+                <button type="button" class="btleft bt" data-dismiss="modal">Huỷ</button>
+                <button type="button" class="btright bt" ng-click="ctrl.submitRemove()">Đồng ý</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="popupAlert" class="modal fade" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content" style="margin-top:180px;">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Thông báo</h4>
+            </div>
+            <div class="contmid" style="text-align: center">
+                {{ctrl.popMessage}}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btcenter bt" data-dismiss="modal">Đóng</button>
+            </div>
+        </div>
+    </div>
+</div>
