--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -22,6 +22,7 @@ section{overflow:hidden}
 .w24{width:24%}
 .w25{width:25%}
 .w40{width:40%}
+.w30{width:30%}
 .w50{width:50%}
 .w60{width:60%}
 .w55{width:55%}
@@ -286,6 +287,21 @@ section{overflow:hidden}
 .cart .cart-title .step:after {content: '';display: block;position: absolute;left: 100%;top: 0%;margin-top: 0px;width: 0;height: 0;border-top: 22px solid transparent;border-right: 20px solid transparent;border-bottom: 20px solid transparent;}
 .cart .cart-title .step.active{background-color:#1e67af;}
 
+.cat .product-detail .list-images li{float:left;width:100px;margin-right:10px;}
+.cat .product-detail .list-images li img{border:2px solid transparent}
+.cat .product-detail .list-images li  .active{border:2px solid #f80b43}
+.cat .product-detail .price{margin-top:10px;border-top:1px solid #e8e8e8}
+.cat .product-detail .price span{color:#ff0000;font-size:18px;}
+.cat .product-detail .price span.sale_off{font-size:16px;}
+.cat .product-detail .option {padding:5px 0px}
+.cat .product-detail .option span{border:1px solid transparent;padding:2px 10px;cursor:pointer}
+.cat .product-detail .option span.active{border:1px solid #ff0000}
+.cat .product-detail .quantity span{border:1px solid #ff0000;padding:2px 30px;}
+
+.cat .product-detail .add-to-cart {margin-top:20px;color:#fff;text-transform:uppercase;font-size:16px;}
+.cat .product-detail .add-to-cart .img{background-color:#c0131f;}
+.cat .product-detail .add-to-cart .text{padding:10px 20px;line-height:30px;background-color:#ec2c39;}
+
 .paging {padding:70px 0px;line-height:50px;}
 .paging ul{float:right;}
 .paging li{margin:0px 5px;float:left;height:50px;width:50px;text-align:center;background-color:#e7e7e7}
@@ -299,13 +315,14 @@ section{overflow:hidden}
 
 /* The Modal (background) */
 .modal {display: none;position: fixed;z-index: 1;left: 0;top: 0;width: 100%;height: 100%;overflow: auto;background-color: rgb(0,0,0);background-color: rgba(0,0,0,0.4);}
-.modal .modal-content {background-color: #fefefe;color: #fff;margin: 5% auto;padding: 10px;width: 60%;}
-.modal .modal-content.location{background: url(../images/bg_location.png) bottom center no-repeat;min-height: 450px;}
-.modal .close {float: right;background: url(../images/icon_close.png) center no-repeat;width: 40px;height: 39px;cursor: pointer;}
-.modal .title {font-size: 16px;text-transform:uppercase}
-.modal .from-position{padding-left:20%;padding-top:20px;width:60%}
-.modal .from-position input{border:2px #898989 solid;border-right:none;height:20px;padding:10px 0px;width:80%}
-.modal .from-position button{width:20%;height:44px;margin:0px;background-color:#f80b43;color:#fff;margin-left:-10px;border:2px #898989 solid;border-left:none;}
+.modal .close-modal  {display:none}
+.modal .modal-content {background-color: #fefefe;margin: 5% auto;padding: 10px;width: 60%;}
+.modal .modal-content.location{color: #fff;background: url(../images/bg_location.png) bottom center no-repeat;min-height: 450px;}
+.modal .modal-content.location .close {float: right;background: url(../images/icon_close.png) center no-repeat;width: 40px;height: 39px;cursor: pointer;}
+.modal .modal-content.location .title {font-size: 16px;text-transform:uppercase}
+.modal .modal-content.location .from-position{padding-left:20%;padding-top:20px;width:60%}
+.modal .modal-content.location .from-position input{border:2px #898989 solid;border-right:none;height:20px;padding:10px 0px;width:80%}
+.modal .modal-content.location .from-position button{width:20%;height:44px;margin:0px;background-color:#f80b43;color:#fff;margin-left:-10px;border:2px #898989 solid;border-left:none;}
 
 @media screen and (max-width:1400px) {
 	.wrapper {width:100%}
