--- a/public/templates/partials/cart-right.html
+++ b/public/templates/partials/cart-right.html
@@ -1,25 +1,45 @@
-<div class="product-content" ng-repeat="cart in cartRightCtrl.carts track by $index">
-	<div class="left">
-		<div class="pt10 img text-center">
-			{{cart.quantity}}
+<div class="left w20">
+	<div class="bgebebeb ml10 mt10 p10">
+		<div class="text-center mb10">
+			Chúc mừng bạn đã được <span>FREE<span> ship
 		</div>
-	</div>
-	<div class="right">
-		<div class="product-name pb10">
-			<a ng-click="cartRightCtrl.openDetail(cart.product_id)">{{cart.name}}</a>
+		<div class="progress progress-success progress-striped" data-percent="25%">
+			<div class="bar" style="width: 100%;"></div>
 		</div>
-	</div>
-	<div class="clearfix"></div>
-	<div class="left">
-		<div class="img">
-			<a ng-click="cartRightCtrl.openDetail(cart.product_id)"><img src="{{cart.image}}" /></a>
+
+		<div class="text-center mb10 fw">
+			GIỎ HÀNG CỦA BẠN
 		</div>
-	</div>
-	<div class="right">
-		<div class="price">
-			<p class="mt10 discount"><br ng-if="cart.compare_at_price >= cart.price" />{{cart.compare_at_price | number}} VND</p>
-			<span ng-if="cart.compare_at_price < cart.price">{{cart.price | number}} VND</span>
+		<div class="cart">
+			<div class="product-content" ng-repeat="cart in ctrl.carts track by $index">
+				<div class="left" style="width:20%">
+					<div class="pt10 img text-center">
+						{{cart.quantity}}
+					</div>
+				</div>
+<!-- 				<div class="right">
+					<div class="product-name pb10">
+						<a ng-click="ctrl.openDetail(cart.product_id)">{{cart.name}}</a>
+					</div>
+				</div> -->
+<!-- 				<div class="clearfix"></div> -->
+				<div>
+					<div class="left" >
+						<div class="img">
+							<a ng-click="ctrl.openDetail(cart.product_id)"><img src="{{cart.image}}" /></a>
+						</div>
+					</div>
+					<div class="left">
+						<div class="price">
+							<p class="mt10 discount"><br ng-if="cart.compare_at_price >= cart.price" />{{cart.compare_at_price | number}}đ</p>
+							<span ng-if="cart.compare_at_price < cart.price">{{cart.price | number}}đ</span>
+						</div>
+					</div>
+				</div>
+				<div><button ng-click="ctrl.removeCart(cart.id)">X</button></div>
+				<div class="clearfix"></div>
+			</div>
 		</div>
+		<div>Tổng tiền: {{ctrl.totalAmount | currency: "": 0}}</div>
 	</div>
-	<div class="clearfix"></div>
 </div>
