--- a/public/templates/products/index.html
+++ b/public/templates/products/index.html
@@ -6,7 +6,6 @@
 			</div>
 			<div class="block_menu bgebebeb mb10 pl5 clearfix">
 				<a ng-click="ctrl.openHome()"><img src="/assets/images/icon_home.png"/> VNSHOP</a>>
-				<a ng-repeat="parent in ctrl.parents track by $index" ng-click="ctrl.openCategory(parent.id)">{{parent.name}}</a>
 				<a href="javascript:;" class="fw">{{ctrl.category.name}}</a>
 			</div>
 			<div class="product pb10 clearfix">
@@ -118,49 +117,7 @@
 					&nbsp
 					<div class="clearfix"></div>
 				</div>
-				<div class="left w20">
-					<div class="bgebebeb ml10 mt10 p10">
-						<div class="text-center mb10">
-							Chúc mừng bạn đã được <span>FREE<span> ship
-						</div>
-						<div class="progress progress-success progress-striped" data-percent="25%">
-							<div class="bar" style="width: 100%;"></div>
-						</div>
-
-						<div class="text-center mb10 fw">
-							GIỎ HÀNG CỦA BẠN
-						</div>
-						<div class="cart">
-							<div class="product-content" ng-repeat="cart in ctrl.carts track by $index">
-								<div class="left">
-									<div class="pt10 img text-center">
-										{{cart.quantity}}
-									</div>
-								</div>
-								<div class="right">
-									<div class="product-name pb10">
-										<a ng-click="ctrl.openDetail(cart.product_id)">{{cart.name}}</a>
-									</div>
-								</div>
-								<div class="clearfix"></div>
-								<div class="left">
-									<div class="img">
-										<a ng-click="ctrl.openDetail(cart.product_id)"><img src="{{cart.image}}" /></a>
-									</div>
-								</div>
-								<div class="right">
-									<div class="price">
-										<p class="mt10 discount"><br ng-if="cart.compare_at_price >= cart.price" />{{cart.compare_at_price | number}} VND</p>
-										<span ng-if="cart.compare_at_price < cart.price">{{cart.price | number}} VND</span>
-									</div>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-
-						</div>
-						<div>Tổng cộng: {{ctrl.totalAmount}}</div>
-					</div>
-				</div>
+				<div ui-view="cart_right"></div>
 			</div>
 		</div>
 	</div>
